crates/swc_ecma_parser/tests/errors/async-line-break/2/input.js
foo = async
function() {
    return 42
}